// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render expense list with empty msg 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No Expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`Should render expenses list with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <Connect(ExpensesListItem)
      amount={195000}
      createdAt={0}
      description="Weed"
      id="1"
      note=""
    />
    <Connect(ExpensesListItem)
      amount={25000}
      createdAt={-345600000}
      description="Beer"
      id="2"
      note=""
    />
    <Connect(ExpensesListItem)
      amount={35000}
      createdAt={345600000}
      description="Hookers"
      id="3"
      note=""
    />
  </div>
</div>
`;
